Thread stacksize is reported with wrong units in os::create_thread logging

XMLWordPrintable

    • b09
    • 20
    • b21

        JDK-8290067 added logging when the thread is created:

           log_info(os, thread)("Thread attached (tid: " UINTX_FORMAT ", pthread id: " UINTX_FORMAT
                                ", stack: " PTR_FORMAT " - " PTR_FORMAT " (" SIZE_FORMAT "k) ).",
                                os::current_thread_id(), (uintx) pthread_self(),
                               p2i(thread->stack_base()), p2i(thread->stack_end()), thread->stack_size());

        but the stack size is reported as being in "K" when thread->stack_size() is actually in bytes.

              Assignee:
              Thomas Stuefe
              Reporter:
              David Holmes
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: