8306883: Thread stacksize is reported with wrong units in os::create_thread logging

Backport-of: 27c5c1070ac559caa8dbad598337046f59355464